modifed css styles

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <main id="maincontent" role="main">
 
     <section id="map-container" aria-label="Google Map">
-      <div id="map"></div>
+      <div id="map" role="application"></div>
     </section>
 
     <section>
