--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Normalize.css for better cross-browser consistency -->
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
-  <link rel="stylesheet" href="css/styles.css">
+  <!-- Main CSS file -->
+  <link rel="stylesheet" href="css/styles.css" type="text/css">
   <title>Restaurant Reviews</title>
 </head>
 
@@ -44,7 +46,7 @@
 
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAB-VrOvUwW_igsJiOcZKre582ywGEBaz4&callback=initMap" onerror="googleapiError()">
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAB-VrOvUwW_igsJiOcZKre582ywGEBaz4&callback=initMap">
   </script>
 
   <footer id="footer">
