--- a/restaurant.html
+++ b/restaurant.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Normalize.css for better cross-browser consistency -->
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <!-- Main CSS file -->
@@ -11,13 +14,15 @@
 
 <body class="inside">
   <!-- Beginning header -->
-  <header>
+  <header class="restaurant-header">
     <!-- Beginning nav -->
     <nav>
-      <h1><a href="/">Restaurant Reviews</a></h1>
+      <h1>
+        <a href="/">Restaurant Reviews</a>
+      </h1>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" >
+    <ul id="breadcrumb" role="navigation" aria-label="BreadCrumb">
       <li><a href="/">Home</a></li>
     </ul>
     <!-- End breadcrumb -->
@@ -26,32 +31,42 @@
   <!-- End header -->
 
   <!-- Beginning main -->
-  <main id="maincontent">
-    <!-- Beginning map -->
-    <section id="map-container">
-      <div id="map"></div>
-    </section>
-    <!-- End map -->
-    <!-- Beginning restaurant -->
-    <section id="restaurant-container">
-      <h1 id="restaurant-name"></h1>
-      <img id="restaurant-img">
-      <p id="restaurant-cuisine"></p>
-      <p id="restaurant-address"></p>
-      <table id="restaurant-hours"></table>
-    </section>
-    <!-- end restaurant -->
-    <!-- Beginning reviews -->
-    <section id="reviews-container">
+  <main id="maincontent" role="main" class="restaurant-main" aria-describedby="restaurant-name">
+
+    <div class="restaurant-container">
+      <!-- Beginning map -->
+      <div id="map-container" aria-label="Google Map">
+        <div id="map" role="application"></div>
+      </div>
+      <!-- End map -->
+
+      <!-- Beginning restaurant -->
+      <div id="restaurant-info">
+        <h1 id="restaurant-name"></h1>
+        <img id="restaurant-img" alt="restaurant image">
+        <p id="restaurant-cuisine"></p>
+        <p id="restaurant-address"></p>
+        <table id="restaurant-hours"></table>
+      </div>
+      <!-- end restaurant -->
+    </div>
+
+    <div id="reviews-container">
+      <!-- Beginning reviews -->
       <ul id="reviews-list"></ul>
-    </section>
-    <!-- End reviews -->
+      <!-- End reviews -->
+    </div>
+
   </main>
   <!-- End main -->
 
   <!-- Beginning footer -->
   <footer id="footer">
-    Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
+    Copyright (c) 2017 
+    <a href="/">
+      <strong>Restaurant Reviews</strong>
+    </a> 
+    All Rights Reserved.
   </footer>
   <!-- End footer -->
 
